2003-05-21  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b34

	* Fixed an incorrect short PHP tag in view_album.php 

	* Fixed a minor bug in add_photo.php where the fields were getting
	  seeded with invalid data.

2003-05-20  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.4-cvs-b33

	* Added 2 new file names to index.php.

	* Added album summary search

2003-05-20  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.4-cvs-b32

	* Removed diagnostic statements left by bug fix.

2003-05-20  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.4-cvs-b31
	
	* BUGFIX.  Upgrading of albums did not add extra field defaults

2003-05-20  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.4-cvs-b30

	* "Extra fields" added.
		
	* Configurable from Captionator and edit caption
	  (now called "Edit text" in the pull down menu)

	* Are searchable.

	* new upload popup add_photo.php adds only one photo,
	  but lets you enter extra field data.

	* extra_fields.php, to configure extra fields for an album

	* <TITLE> of photo page can be defined via extra
	  fields, and the fields are displayed under the
	  photo and above the caption.

	* list of default extra fields added to config.php

	* changed setup: you can now have optional album
	  defaults, added a verify function to albums defaults,

	* printAlbumOptionList changed so that move_photo.php will
	  only let you move to an upgraded albums, and warns you about
	  others.

	* Removed a warning from init.php, session.php

	* Added version and constructor to AlbumItem.

2003-05-20  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.4-cvs-b29

	* Wrapped "up" and "top" in if-clauses to test for offline
	  mode.  This enables you to download an album and it's
	  subalbums and not the whole gallery when using wget etc.

	* Added new field to Album class: summary.  Displays on
	  page one of your album, and is editable through a popup.

2003-05-20  Joan McGalliard <gallery@joanhenge.plus.com> 1.3.4-cvs-b28
