@@ -1,3 +1,12 @@
+2003-05-22  John Kirkland <jpk@bl.org> 1.3.4-cvsb35
+
+	* Rewrote printAlbumOptionList and printNestedVals in util.php
+	  to conform to the requirements that I added as code comments
+	  above the 2 functions.  This fixes defects #488281 & #669764.
+	
+	* Bug fix in view_album.php with showAdminForm when a non-admin
+	  owns a nested album and not the parent album.
+
 2003-05-21  Bharat Mediratta  <bharat@menalto.com> 1.3.4-cvs-b34
 
 	* Fixed an incorrect short PHP tag in view_album.php 
